# ics-proxy

./: .gitignore  Cargo.toml  default.nix  flake.nix
src/: actions.rs  config_file.rs  main.rs
web_frontend/: Cargo.toml
web_frontend/src/: main.rs
