[package]
name = "ics-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
calcard = "0.3"
reqwest = {version = "0.12"}
axum = "0.8"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
thiserror = "2.0.17"
serde = "1.0"
serde_json = "1.0"
# tokio = {version = "*", features = ["macros", "rt"]}